@@ -1,6 +1,13 @@
 Revision history for Perl module WebService::Linode
 
 {{$NEXT}}
+    - API KVM support:
+      - optional hypervisor argument to linode_clone
+      - linode_config_create & _update helper_xen deprecated in favor of
+        new arg helper_distro
+    - New method group professionalservices_scope
+    - Node balancer health check 'http_body' renamed to 'http' to reflect that
+      it now only checks the first 16K of the response
 
 0.27  2015-02-28 23:49:33 EST
     - Big changes but not in functionality.  Import more verbose description
